--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Anek+Gujarati:wght@100&family=Anek+Odia:wght@100;600&family=Beau+Rivage&family=Kanit:ital,wght@0,500;0,600;1,500&family=Oswald:wght@400;500;600;700&family=PT+Sans+Narrow:wght@700&family=Poppins&display=swap");
 
+/* font-family: 'Anek Gujarati', sans-serif;
+font-family: 'Anek Odia', sans-serif;
+font-family: 'Beau Rivage', cursive;
+font-family: 'Kanit', sans-serif;
+font-family: 'Oswald', sans-serif;
+font-family: 'Poppins', sans-serif;
+font-family: 'PT Sans Narrow', sans-serif; */
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Poppins', sans-serif;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -57,4 +64,71 @@ code {
 
 .img-border {
   border: 3px solid rgb(29, 118, 177);
+}
+
+.images_background {
+  background-image: url('../src/assets/background/banner-bg.svg');
+  width: 100% !important;
+  height: auto !important;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+
+}
+
+.images_background3 {
+  background-image: url('./assets/images/appointment.png');
+  width: 100% !important;
+  height: auto !important;
+  background-position: center;
+  background-size: cover;
+  /* background-attachment: fixed; */
+
+}
+
+.images_background4 {
+  background-image: url('./assets/background/banner-bg.svg');
+  width: 100% !important;
+  height: auto !important;
+  background-position: center;
+  background-size: cover;
+  border-radius: 2px;
+  /* background-attachment: fixed; */
+
+}
+
+@media screen and (min-width: 600px) {
+  .file-inputs {
+    background: #3A4255 !important;
+  }
+}
+
+.imag_uplode {
+  border-radius: 8px;
+}
+
+
+
+
+.img-gradient {
+  position: relative;
+  display: inline-block;
+}
+
+.img-gradient:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+
+  background: linear-gradient(to bottom, rgba(0, 47, 75, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%);
+  /* W3C */
+}
+
+.navbar {
+  /* font-family: 'Anek Odia', sans-serif !important;
+  font-size: 18px !important; */
 }
